// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prettierIgnore.melody.twig 1`] = `
<!-- prettier-ignore -->
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should re-format</span></div>

{#prettier-ignore#}
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should re-format</span></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!-- prettier-ignore -->
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div>
    <span class="what-about-this">Should re-format</span>
</div>

{# prettier-ignore #}
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div>
    <span class="what-about-this">Should re-format</span>
</div>

`;

exports[`prettierIgnoreStartEnd.melody.twig 1`] = `
<!--prettier-ignore-start-->
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
<!-- prettier-ignore-end -->

<div><span    class="what-about-this"  >Should re-format</span></div>

{# prettier-ignore-start #}
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
{# prettier-ignore-end #}

<div><span    class="what-about-this"  >Should re-format</span></div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!-- prettier-ignore-start -->
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
<!-- prettier-ignore-end -->

<div>
    <span class="what-about-this">Should re-format</span>
</div>

{# prettier-ignore-start #}
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
<div><span    class="what-about-this"  >Should not re-format</span></div>
{# prettier-ignore-end #}

<div>
    <span class="what-about-this">Should re-format</span>
</div>

`;
